--- a/web-server/views/partials/Search/searchform.ejs
+++ b/web-server/views/partials/Search/searchform.ejs
@@ -1,11 +1,12 @@
     <div>
+      <h5>Patient Search</h5>
         <form id="searchForm">
           <label for="surname">Surname:</label>
-          <input type="text" id="surname" name="surname" value="" >
+          <input type="text" id="surname" name="surname" value="" ></br>
       
           <label for="forename">Forename:</label>
           <input type="text" id="forename" name="forename" value="" >
-      
+        </br>
           <button type="submit" id="searchPatientButton" name="searchPatientButton">Search</button>
         </form>
       </div>
