--- a/web-server/views/partials/head.ejs
+++ b/web-server/views/partials/head.ejs
@@ -4,25 +4,38 @@
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
 <style>
-  body { padding-top:50px; }
-  /* Optional: Adjust margins and padding for spacing */
-.form-group {
-    margin-bottom: 10px;
-    padding-right: 10px; /* Adjust spacing between label and input */
-}
+    body {
+        padding-top: 10px;
+    }
 
-/* Optional: Display labels and inputs inline */
-.form-group label {
-    display: inline-block;
-    width: 120px; /* Adjust label width as needed */
-    text-align: right; /* Align text to the right for better alignment */
-    margin-right: 10px; /* Adjust margin for spacing */
-}
+    /* Optional: Adjust margins and padding for spacing */
+    .form-group {
+        margin-bottom: 5px;
+        padding-right: 10px;
+        /* Adjust spacing between label and input */
+    }
 
-.form-group input[type="text"] {
-    width: 200px; /* Adjust input width as needed */
-    box-sizing: border-box; /* Include padding and border in the element's total width */
-    vertical-align: middle; /* Align inputs vertically */
-}
+    /* Optional: Display labels and inputs inline */
+    .form-group label {
+        display: inline-block;
+        width: 120px;
+        /* Adjust label width as needed */
+        text-align: right;
+        /* Align text to the right for better alignment */
+        margin-right: 10px;
+        /* Adjust margin for spacing */
+    }
 
+    .form-group input[type="text"] {
+        width: 200px;
+        /* Adjust input width as needed */
+        box-sizing: border-box;
+        /* Include padding and border in the element's total width */
+        vertical-align: middle;
+        /* Align inputs vertically */
+    }
+    tr:hover {
+            cursor: pointer;
+            background-color: #f5f5f5; /* Optional: Add background color on hover */
+        }
 </style>
