--- a/web-server/views/dynamicPartials/Encounter.ejs
+++ b/web-server/views/dynamicPartials/Encounter.ejs
@@ -3,72 +3,72 @@
         <h3>Encounter Resource:</h3>
     <div class="form-group">
 <label for='Encounter.identifier'>identifier</label>
-<input type='text' id='Encounter.identifier' name='identifier' placeholder='.'></div>
+<input type='text' id='Encounter.identifier' name='identifier' placeholder='.' title='name: identifier  minOccurs: 0  maxOccurs: unbounded  type: Identifier  '></div>
 <div class="form-group">
 <label for='Encounter.status'>status</label>
-<input type='text' id='Encounter.status' name='status' placeholder='.'></div>
+<input type='text' id='Encounter.status' name='status' placeholder='.' title='name: status  minOccurs: 1  maxOccurs: 1  type: EncounterStatus  '></div>
 <div class="form-group">
 <label for='Encounter.statusHistory'>statusHistory</label>
-<input type='text' id='Encounter.statusHistory' name='statusHistory' placeholder='.'></div>
+<input type='text' id='Encounter.statusHistory' name='statusHistory' placeholder='.' title='name: statusHistory  type: Encounter.StatusHistory  minOccurs: 0  maxOccurs: unbounded  '></div>
 <div class="form-group">
 <label for='Encounter.class'>class</label>
-<input type='text' id='Encounter.class' name='class' placeholder='.'></div>
+<input type='text' id='Encounter.class' name='class' placeholder='.' title='name: class  minOccurs: 1  maxOccurs: 1  type: Coding  '></div>
 <div class="form-group">
 <label for='Encounter.classHistory'>classHistory</label>
-<input type='text' id='Encounter.classHistory' name='classHistory' placeholder='.'></div>
+<input type='text' id='Encounter.classHistory' name='classHistory' placeholder='.' title='name: classHistory  type: Encounter.ClassHistory  minOccurs: 0  maxOccurs: unbounded  '></div>
 <div class="form-group">
 <label for='Encounter.type'>type</label>
-<input type='text' id='Encounter.type' name='type' placeholder='.'></div>
+<input type='text' id='Encounter.type' name='type' placeholder='.' title='name: type  minOccurs: 0  maxOccurs: unbounded  type: CodeableConcept  '></div>
 <div class="form-group">
 <label for='Encounter.serviceType'>serviceType</label>
-<input type='text' id='Encounter.serviceType' name='serviceType' placeholder='.'></div>
+<input type='text' id='Encounter.serviceType' name='serviceType' placeholder='.' title='name: serviceType  minOccurs: 0  maxOccurs: 1  type: CodeableConcept  '></div>
 <div class="form-group">
 <label for='Encounter.priority'>priority</label>
-<input type='text' id='Encounter.priority' name='priority' placeholder='.'></div>
+<input type='text' id='Encounter.priority' name='priority' placeholder='.' title='name: priority  minOccurs: 0  maxOccurs: 1  type: CodeableConcept  '></div>
 <div class="form-group">
 <label for='Encounter.subject'>subject</label>
-<input type='text' id='Encounter.subject' name='subject' placeholder='.'></div>
+<input type='text' id='Encounter.subject' name='subject' placeholder='.' title='name: subject  minOccurs: 0  maxOccurs: 1  type: Reference  '></div>
 <div class="form-group">
 <label for='Encounter.episodeOfCare'>episodeOfCare</label>
-<input type='text' id='Encounter.episodeOfCare' name='episodeOfCare' placeholder='.'></div>
+<input type='text' id='Encounter.episodeOfCare' name='episodeOfCare' placeholder='.' title='name: episodeOfCare  minOccurs: 0  maxOccurs: unbounded  type: Reference  '></div>
 <div class="form-group">
 <label for='Encounter.basedOn'>basedOn</label>
-<input type='text' id='Encounter.basedOn' name='basedOn' placeholder='.'></div>
+<input type='text' id='Encounter.basedOn' name='basedOn' placeholder='.' title='name: basedOn  minOccurs: 0  maxOccurs: unbounded  type: Reference  '></div>
 <div class="form-group">
 <label for='Encounter.participant'>participant</label>
-<input type='text' id='Encounter.participant' name='participant' placeholder='.'></div>
+<input type='text' id='Encounter.participant' name='participant' placeholder='.' title='name: participant  type: Encounter.Participant  minOccurs: 0  maxOccurs: unbounded  '></div>
 <div class="form-group">
 <label for='Encounter.appointment'>appointment</label>
-<input type='text' id='Encounter.appointment' name='appointment' placeholder='.'></div>
+<input type='text' id='Encounter.appointment' name='appointment' placeholder='.' title='name: appointment  minOccurs: 0  maxOccurs: unbounded  type: Reference  '></div>
 <div class="form-group">
 <label for='Encounter.period'>period</label>
-<input type='text' id='Encounter.period' name='period' placeholder='.'></div>
+<input type='text' id='Encounter.period' name='period' placeholder='.' title='name: period  minOccurs: 0  maxOccurs: 1  type: Period  '></div>
 <div class="form-group">
 <label for='Encounter.length'>length</label>
-<input type='text' id='Encounter.length' name='length' placeholder='.'></div>
+<input type='text' id='Encounter.length' name='length' placeholder='.' title='name: length  minOccurs: 0  maxOccurs: 1  type: Duration  '></div>
 <div class="form-group">
 <label for='Encounter.reasonCode'>reasonCode</label>
-<input type='text' id='Encounter.reasonCode' name='reasonCode' placeholder='.'></div>
+<input type='text' id='Encounter.reasonCode' name='reasonCode' placeholder='.' title='name: reasonCode  minOccurs: 0  maxOccurs: unbounded  type: CodeableConcept  '></div>
 <div class="form-group">
 <label for='Encounter.reasonReference'>reasonReference</label>
-<input type='text' id='Encounter.reasonReference' name='reasonReference' placeholder='.'></div>
+<input type='text' id='Encounter.reasonReference' name='reasonReference' placeholder='.' title='name: reasonReference  minOccurs: 0  maxOccurs: unbounded  type: Reference  '></div>
 <div class="form-group">
 <label for='Encounter.diagnosis'>diagnosis</label>
-<input type='text' id='Encounter.diagnosis' name='diagnosis' placeholder='.'></div>
+<input type='text' id='Encounter.diagnosis' name='diagnosis' placeholder='.' title='name: diagnosis  type: Encounter.Diagnosis  minOccurs: 0  maxOccurs: unbounded  '></div>
 <div class="form-group">
 <label for='Encounter.account'>account</label>
-<input type='text' id='Encounter.account' name='account' placeholder='.'></div>
+<input type='text' id='Encounter.account' name='account' placeholder='.' title='name: account  minOccurs: 0  maxOccurs: unbounded  type: Reference  '></div>
 <div class="form-group">
 <label for='Encounter.hospitalization'>hospitalization</label>
-<input type='text' id='Encounter.hospitalization' name='hospitalization' placeholder='.'></div>
+<input type='text' id='Encounter.hospitalization' name='hospitalization' placeholder='.' title='name: hospitalization  type: Encounter.Hospitalization  minOccurs: 0  maxOccurs: 1  '></div>
 <div class="form-group">
 <label for='Encounter.location'>location</label>
-<input type='text' id='Encounter.location' name='location' placeholder='.'></div>
+<input type='text' id='Encounter.location' name='location' placeholder='.' title='name: location  type: Encounter.Location  minOccurs: 0  maxOccurs: unbounded  '></div>
 <div class="form-group">
 <label for='Encounter.serviceProvider'>serviceProvider</label>
-<input type='text' id='Encounter.serviceProvider' name='serviceProvider' placeholder='.'></div>
+<input type='text' id='Encounter.serviceProvider' name='serviceProvider' placeholder='.' title='name: serviceProvider  minOccurs: 0  maxOccurs: 1  type: Reference  '></div>
 <div class="form-group">
 <label for='Encounter.partOf'>partOf</label>
-<input type='text' id='Encounter.partOf' name='partOf' placeholder='.'></div>
+<input type='text' id='Encounter.partOf' name='partOf' placeholder='.' title='name: partOf  minOccurs: 0  maxOccurs: 1  type: Reference  '></div>
 </form>
     <div>
