--- a/web-server/views/dynamicPartials/Encounter.ejs
+++ b/web-server/views/dynamicPartials/Encounter.ejs
@@ -8,117 +8,117 @@
     <div class="form-group">
 <label for='Identifier.identifier'>identifier</label>
 <input type='text' id='Encounter.identifier' name='identifier' title='name: identifier  minOccurs: 0  maxOccurs: unbounded  type: Identifier  '
-    value="<%= data && data.identifier ? data.identifier : '' %>">Identifier
-    </div>
+                value="<%= data && data.identifier ? data.identifier : '' %>">Identifier
+                </div>
 <div class="form-group">
 <label for='EncounterStatus.status'>status</label>
 <input type='text' id='Encounter.status' name='status' title='name: status  minOccurs: 1  maxOccurs: 1  type: EncounterStatus  '
-    value="<%= data && data.status ? data.status : '' %>">EncounterStatus
-    </div>
+                value="<%= data && data.status ? data.status : '' %>">EncounterStatus
+                </div>
 <div class="form-group">
 <label for='Encounter.StatusHistory.statusHistory'>statusHistory</label>
 <input type='text' id='Encounter.statusHistory' name='statusHistory' title='name: statusHistory  type: Encounter.StatusHistory  minOccurs: 0  maxOccurs: unbounded  '
-    value="<%= data && data.statusHistory ? data.statusHistory : '' %>">Encounter.StatusHistory
-    </div>
+                value="<%= data && data.statusHistory ? data.statusHistory : '' %>">Encounter.StatusHistory
+                </div>
 <div class="form-group">
 <label for='Coding.class'>class</label>
 <input type='text' id='Encounter.class' name='class' title='name: class  minOccurs: 1  maxOccurs: 1  type: Coding  '
-    value="<%= data && data.class ? data.class : '' %>">Coding
-    </div>
+                value="<%= data && data.class ? data.class : '' %>">Coding
+                </div>
 <div class="form-group">
 <label for='Encounter.ClassHistory.classHistory'>classHistory</label>
 <input type='text' id='Encounter.classHistory' name='classHistory' title='name: classHistory  type: Encounter.ClassHistory  minOccurs: 0  maxOccurs: unbounded  '
-    value="<%= data && data.classHistory ? data.classHistory : '' %>">Encounter.ClassHistory
-    </div>
+                value="<%= data && data.classHistory ? data.classHistory : '' %>">Encounter.ClassHistory
+                </div>
 <div class="form-group">
 <label for='CodeableConcept.type'>type</label>
 <input type='text' id='Encounter.type' name='type' title='name: type  minOccurs: 0  maxOccurs: unbounded  type: CodeableConcept  '
-    value="<%= data && data.type ? data.type : '' %>">CodeableConcept
-    </div>
+                value="<%= data && data.type ? data.type : '' %>">CodeableConcept
+                </div>
 <div class="form-group">
 <label for='CodeableConcept.serviceType'>serviceType</label>
 <input type='text' id='Encounter.serviceType' name='serviceType' title='name: serviceType  minOccurs: 0  maxOccurs: 1  type: CodeableConcept  '
-    value="<%= data && data.serviceType ? data.serviceType : '' %>">CodeableConcept
-    </div>
+                value="<%= data && data.serviceType ? data.serviceType : '' %>">CodeableConcept
+                </div>
 <div class="form-group">
 <label for='CodeableConcept.priority'>priority</label>
 <input type='text' id='Encounter.priority' name='priority' title='name: priority  minOccurs: 0  maxOccurs: 1  type: CodeableConcept  '
-    value="<%= data && data.priority ? data.priority : '' %>">CodeableConcept
-    </div>
+                value="<%= data && data.priority ? data.priority : '' %>">CodeableConcept
+                </div>
 <div class="form-group">
 <label for='Reference.subject'>subject</label>
 <input type='text' id='Encounter.subject' name='subject' title='name: subject  minOccurs: 0  maxOccurs: 1  type: Reference  '
-    value="<%= data && data.subject ? data.subject : '' %>">Reference
-    </div>
+        value="<%= data && data.subject ? data.subject.reference : '' %>">Reference
+        </div>
 <div class="form-group">
 <label for='Reference.episodeOfCare'>episodeOfCare</label>
 <input type='text' id='Encounter.episodeOfCare' name='episodeOfCare' title='name: episodeOfCare  minOccurs: 0  maxOccurs: unbounded  type: Reference  '
-    value="<%= data && data.episodeOfCare ? data.episodeOfCare : '' %>">Reference
-    </div>
+        value="<%= data && data.episodeOfCare ? data.episodeOfCare.reference : '' %>">Reference
+        </div>
 <div class="form-group">
 <label for='Reference.basedOn'>basedOn</label>
 <input type='text' id='Encounter.basedOn' name='basedOn' title='name: basedOn  minOccurs: 0  maxOccurs: unbounded  type: Reference  '
-    value="<%= data && data.basedOn ? data.basedOn : '' %>">Reference
-    </div>
+        value="<%= data && data.basedOn ? data.basedOn.reference : '' %>">Reference
+        </div>
 <div class="form-group">
 <label for='Encounter.Participant.participant'>participant</label>
 <input type='text' id='Encounter.participant' name='participant' title='name: participant  type: Encounter.Participant  minOccurs: 0  maxOccurs: unbounded  '
-    value="<%= data && data.participant ? data.participant : '' %>">Encounter.Participant
-    </div>
+                value="<%= data && data.participant ? data.participant : '' %>">Encounter.Participant
+                </div>
 <div class="form-group">
 <label for='Reference.appointment'>appointment</label>
 <input type='text' id='Encounter.appointment' name='appointment' title='name: appointment  minOccurs: 0  maxOccurs: unbounded  type: Reference  '
-    value="<%= data && data.appointment ? data.appointment : '' %>">Reference
-    </div>
+        value="<%= data && data.appointment ? data.appointment.reference : '' %>">Reference
+        </div>
 <div class="form-group">
 <label for='Period.period'>period</label>
 <input type='text' id='Encounter.period' name='period' title='name: period  minOccurs: 0  maxOccurs: 1  type: Period  '
-    value="<%= data && data.period ? data.period : '' %>">Period
-    </div>
+                value="<%= data && data.period ? data.period : '' %>">Period
+                </div>
 <div class="form-group">
 <label for='Duration.length'>length</label>
 <input type='text' id='Encounter.length' name='length' title='name: length  minOccurs: 0  maxOccurs: 1  type: Duration  '
-    value="<%= data && data.length ? data.length : '' %>">Duration
-    </div>
+                value="<%= data && data.length ? data.length : '' %>">Duration
+                </div>
 <div class="form-group">
 <label for='CodeableConcept.reasonCode'>reasonCode</label>
 <input type='text' id='Encounter.reasonCode' name='reasonCode' title='name: reasonCode  minOccurs: 0  maxOccurs: unbounded  type: CodeableConcept  '
-    value="<%= data && data.reasonCode ? data.reasonCode : '' %>">CodeableConcept
-    </div>
+                value="<%= data && data.reasonCode ? data.reasonCode : '' %>">CodeableConcept
+                </div>
 <div class="form-group">
 <label for='Reference.reasonReference'>reasonReference</label>
 <input type='text' id='Encounter.reasonReference' name='reasonReference' title='name: reasonReference  minOccurs: 0  maxOccurs: unbounded  type: Reference  '
-    value="<%= data && data.reasonReference ? data.reasonReference : '' %>">Reference
-    </div>
+        value="<%= data && data.reasonReference ? data.reasonReference.reference : '' %>">Reference
+        </div>
 <div class="form-group">
 <label for='Encounter.Diagnosis.diagnosis'>diagnosis</label>
 <input type='text' id='Encounter.diagnosis' name='diagnosis' title='name: diagnosis  type: Encounter.Diagnosis  minOccurs: 0  maxOccurs: unbounded  '
-    value="<%= data && data.diagnosis ? data.diagnosis : '' %>">Encounter.Diagnosis
-    </div>
+                value="<%= data && data.diagnosis ? data.diagnosis : '' %>">Encounter.Diagnosis
+                </div>
 <div class="form-group">
 <label for='Reference.account'>account</label>
 <input type='text' id='Encounter.account' name='account' title='name: account  minOccurs: 0  maxOccurs: unbounded  type: Reference  '
-    value="<%= data && data.account ? data.account : '' %>">Reference
-    </div>
+        value="<%= data && data.account ? data.account.reference : '' %>">Reference
+        </div>
 <div class="form-group">
 <label for='Encounter.Hospitalization.hospitalization'>hospitalization</label>
 <input type='text' id='Encounter.hospitalization' name='hospitalization' title='name: hospitalization  type: Encounter.Hospitalization  minOccurs: 0  maxOccurs: 1  '
-    value="<%= data && data.hospitalization ? data.hospitalization : '' %>">Encounter.Hospitalization
-    </div>
+                value="<%= data && data.hospitalization ? data.hospitalization : '' %>">Encounter.Hospitalization
+                </div>
 <div class="form-group">
 <label for='Encounter.Location.location'>location</label>
 <input type='text' id='Encounter.location' name='location' title='name: location  type: Encounter.Location  minOccurs: 0  maxOccurs: unbounded  '
-    value="<%= data && data.location ? data.location : '' %>">Encounter.Location
-    </div>
+                value="<%= data && data.location ? data.location : '' %>">Encounter.Location
+                </div>
 <div class="form-group">
 <label for='Reference.serviceProvider'>serviceProvider</label>
 <input type='text' id='Encounter.serviceProvider' name='serviceProvider' title='name: serviceProvider  minOccurs: 0  maxOccurs: 1  type: Reference  '
-    value="<%= data && data.serviceProvider ? data.serviceProvider : '' %>">Reference
-    </div>
+        value="<%= data && data.serviceProvider ? data.serviceProvider.reference : '' %>">Reference
+        </div>
 <div class="form-group">
 <label for='Reference.partOf'>partOf</label>
 <input type='text' id='Encounter.partOf' name='partOf' title='name: partOf  minOccurs: 0  maxOccurs: 1  type: Reference  '
-    value="<%= data && data.partOf ? data.partOf : '' %>">Reference
-    </div>
+        value="<%= data && data.partOf ? data.partOf.reference : '' %>">Reference
+        </div>
 </form>
     <div>
