--- a/web-server/views/partials/navbar.ejs
+++ b/web-server/views/partials/navbar.ejs
@@ -17,7 +17,8 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <% item.submenu.forEach(subitem => { %>
-                                <a class="dropdown-item" href="<%= subitem.link %>"><%= subitem.name %></a>
+                               
+                                <a class="dropdown-item" href="#"><%= subitem.name %></a>
                             <% }) %>
                         </div>
                     </li>
